<resources>
    <string name="app_name">PexelsApp</string>
    <string name="home">Home</string>
    <string name="bookmark">Bookmark</string>
    <string name="search">Search</string>
    <string name="no_results_found">No results found</string>
    <string name="explore">Explore</string>
    <string name="try_again">Try again</string>
    <string name="request_error">Error 404\nNot Found</string>
    <string name="network_request_error">Network Request Error</string>
    <string name="details">Details</string>
    <string name="download">Download</string>
    <string name="image_not_found">Image not found</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="nothing_saved">You haven\'t saved anything yet</string>
</resources>