<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/app_navigation"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.ivanova.pexelsapp.View.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_detailsFragment"
            app:destination="@id/detailsFragment"/>
    </fragment>
    <fragment
        android:id="@+id/bookmarksFragment"
        android:name="com.ivanova.pexelsapp.View.BookmarksFragment"
        android:label="@string/bookmark"
        tools:layout="@layout/fragment_bookmarks" >
        <action
            android:id="@+id/action_bookmarksFragment_to_detailsFragment"
            app:destination="@id/detailsFragment" />
        <action
            android:id="@+id/action_bookmarksFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>

    <fragment
        android:id="@+id/detailsFragment"
        android:name="com.ivanova.pexelsapp.View.DetailsFragment"
        android:label="@string/details"
        tools:layout="@layout/fragment_details">
        <argument
            android:name="photoId"
            android:defaultValue="0"
            app:argType="integer" />
        <argument
            android:name="screenFrom"
            android:defaultValue=""
            app:argType="string" />
        <action
            android:id="@+id/action_detailsFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
</navigation>